--- a/style/letter.css
+++ b/style/letter.css
@@ -2,8 +2,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: url('bg.jpg') no-repeat center center/cover;
+    height: 63vh;
+    background: url('bg.jpg');
     margin: 0;
 }
 
