--- a/style/letter.css
+++ b/style/letter.css
@@ -18,7 +18,8 @@ body {
     position: center;
     width: 100%;
     height: 100%;
-    margin-left: 300px;
+    margin-top: 300px;
+    margin-right: 300px;
     background: #f8bbd0;
     border-radius: 10px;
     overflow: hidden;
