--- a/style/nextpage.css
+++ b/style/nextpage.css
@@ -1,5 +1,5 @@
 body {
-    background: url('bg.jpg') no-repeat center center fixed;
+    background: url('bg.jpg');
     background-size: cover;
     display: flex;
     justify-content: center;
