--- a/style/index.css
+++ b/style/index.css
@@ -9,8 +9,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: url('bg.jpg') no-repeat center center/cover;
+    height: 62vh;
+    background: url('bg.jpg');
 }
 
 .container {
