--- a/style/messages.css
+++ b/style/messages.css
@@ -1,9 +1,9 @@
 /* General Styling */
 body {
     font-family: Arial, sans-serif;
-    background: url('bg.jpg') no-repeat center center/cover;
+    background: url('bg.jpg');
     margin: 0;
-    height: 100vh;
+    height: 62vh;
     padding: 20px;
 }
 
