--- a/style/nextpage.css
+++ b/style/nextpage.css
@@ -51,27 +51,14 @@ h2 {
     font-size: 14px;
 }
 
-.navigation {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.nav-button {
-    background-color: rgba(255, 255, 255, 0.877); /* Semi-transparent white */
+.buutton {
+    margin-top: 600px;
+    margin-right: 400px;
+    padding: 10px 20px;
+    background: white;
+    color: #f78da7;
     border: none;
-    padding: 12px 20px;
-    border-radius: 25px; /* Rounded corners */
+    border-radius: 20px;
     font-size: 16px;
-    color: #f78da7; 
-    display: flex;
-    align-items: center;
-    gap: 8px;
     cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-.nav-button:hover {
-    background-color: rgba(255, 255, 255, 0.7);
-}
+        }
