--- a/style/nextpage.css
+++ b/style/nextpage.css
@@ -13,6 +13,7 @@ body {
 
 h2 {
     font-size: 24px;
+    margin-top: 200px;
     margin-bottom: 20px;
     color: #ffffff
 }
@@ -55,6 +56,7 @@ h2 {
     background: white;
     color: #f78da7;
     border: none;
+    position: bottom;
     border-radius: 20px;
     font-size: 16px;
     cursor: pointer;
