--- a/style/nextpage.css
+++ b/style/nextpage.css
@@ -32,6 +32,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 60px;
     border: none;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
