--- a/style/music.css
+++ b/style/music.css
@@ -24,7 +24,7 @@ body {
 .album-art {
     width: 300px;
     height: 300px;
-    background: white;
+    background: url('imgs/music/16.png') center/cover no-repeat;
     border-radius: 10px;
     margin-bottom: 20px;
         }
