--- a/style/index.css
+++ b/style/index.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    background: url('bg.jpg');
+    background: url('bgg.jpg');
 }
 
 .container {
