--- a/style/memories.css
+++ b/style/memories.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: url('bg.jpg');
+    background: url('bgg.jpg');
     text-align: center;
     margin: 0;
     padding: 20px;
