--- a/style/messages.css
+++ b/style/messages.css
@@ -1,7 +1,7 @@
 /* General Styling */
 body {
     font-family: Arial, sans-serif;
-    background: url('bg.jpg');
+    background: url('bgg.jpg');
     margin: 0;
     height: 62vh;
     padding: 20px;
