--- a/style/music.css
+++ b/style/music.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    background: url('bg.jpg');
+    background: url('bgg.jpg');
     font-family: Arial, sans-serif;
     text-align: center;
     color: white;
