--- a/style/nextpage.css
+++ b/style/nextpage.css
@@ -1,5 +1,5 @@
 body {
-    background: url('bg.jpg');
+    background: url('bgg.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
