--- a/style/nextpage.css
+++ b/style/nextpage.css
@@ -15,7 +15,7 @@ h2 {
     font-size: 24px;
     margin-top: 200px;
     margin-bottom: 50px;
-    color: #ffffff
+    color: black;
 }
 
 .buttons {
