--- a/style/memories.css
+++ b/style/memories.css
@@ -7,6 +7,10 @@
         padding: 20px;
     }
 
+	body.no-scroll {
+    overflow: hidden;
+    }
+    
     h1 {
         font-size: 22px;
         margin-bottom: 15px;
