--- a/style/music.css
+++ b/style/music.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 430px) 
 /* General Styles */
 body {
     background: url('bgg.jpg');
@@ -99,4 +99,4 @@ body {
 .nav-button:hover {
     background-color: rgba(255, 255, 255, 0.7);
 }
-}
+
